--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
   --blue-pressed-ocean: #404bbf;
   --light-white: #ffffff;
   --dark-white-cloud: #f4f4fd;
-  --grey-light-cornflower: #E7E9FC;
+  --grey-light-cornflower: #e7e9fc;
   --main-font-family: "Roboto", sans-serif;
   --secondary-font-family: "Raleway", sans-serif;
 }
@@ -40,7 +40,7 @@ ol {
   padding-left: 0;
 }
 
-img{
+img {
   display: block;
 }
 
@@ -69,28 +69,29 @@ body {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-  }
+}
 
 /*header styles*/
 
-.page-header{
+.page-header {
   padding-top: 24px;
   padding-bottom: 24px;
+  border-bottom: 1px solid var(--grey-light-cornflower);
+  background: var(--light-white);
 }
 
-.header-container{
+.header-container {
   display: flex;
-  justify-content: space-between;  
+  justify-content: space-between;
 }
 
-.main-navigation{
-  display: flex;  
-}
-
-.nav-menu{
+.main-navigation {
   display: flex;
-  column-gap: 40px;  
-  
+}
+
+.nav-menu {
+  display: flex;
+  column-gap: 40px;
 }
 
 .logo-text {
@@ -118,7 +119,7 @@ body {
   font-style: normal;
 }
 
-.contacts-list{
+.contacts-list {
   display: flex;
   column-gap: 40px;
 }
@@ -155,7 +156,7 @@ body {
   background-color: var(--black-navy);
   text-align: center;
   padding-top: 188px;
-  padding-bottom: 188px;  
+  padding-bottom: 188px;
 }
 
 .hero-title {
@@ -189,17 +190,17 @@ body {
 
 /*Advantages section*/
 
-.advantages-section{
+.advantages-section {
   padding-top: 120px;
   padding-bottom: 120px;
 }
 
-.advantages-list{
+.advantages-list {
   display: flex;
   column-gap: 24px;
 }
 
-.advantage-item{
+.advantage-item {
   flex-basis: calc((100% - 72px) / 4);
 }
 
@@ -219,16 +220,16 @@ body {
 
 /*Our work section*/
 
-.our-work{
+.our-work {
   padding-bottom: 120px;
 }
 
-.work-list{
+.work-list {
   display: flex;
   column-gap: 24px;
 }
 
-.work-list-item{
+.work-list-item {
   flex-basis: calc((100% - 48px) / 3);
 }
 
@@ -250,6 +251,7 @@ body {
   flex-basis: calc((100% - 72px) / 4);
   background-color: var(--light-white);
   padding-bottom: 32px;
+  border-radius: 0px 0px 4px 4px;  
 }
 
 .team-member-name {
@@ -270,17 +272,16 @@ body {
 /*footer*/
 
 .page-footer {
-  background-color: var(--black-navy);  
+  background-color: var(--black-navy);
   padding-top: 100px;
   padding-bottom: 100px;
 }
 
-.footer-container{
+.footer-container {
   width: 264px;
 }
 
-
-.page-footer .logo-text{
+.page-footer .logo-text {
   margin-bottom: 16px;
 }
 
@@ -296,7 +297,7 @@ body {
 
 /*Portfolio*/
 
-.work-exhamples-section{
+.work-exhamples-section {
   padding-top: 96px;
   padding-bottom: 120px;
 }
@@ -323,32 +324,36 @@ body {
   border-color: var(--blue-pressed-ocean);
 }
 
-.filter-buttons-list{
+.filter-buttons-list {
   display: flex;
   justify-content: center;
   column-gap: 24px;
   margin-bottom: 72px;
 }
 
-.work-exhamples-list{  
+.work-exhamples-list {
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
 }
 
-.work-exhample-link{
+.work-exhample-link {
   display: block;
 }
 
-.work-exhample-item{
-  padding-bottom: 32px;
-  flex-basis: calc((100% - 48) /3);
+.work-exhample-item {
+    flex-basis: calc((100% - 48) / 3);
 }
 
-.exhample-info{
-  margin-top: 32px;
+.exhample-info {
   padding-left: 8px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  border-left: 1px solid var(--grey-light-cornflower);
+  border-right: 1px solid var(--grey-light-cornflower);
+  border-bottom: 1px solid var(--grey-light-cornflower);
+
 }
 
 .work-exhample-title {
