--- a/css/styles.css
+++ b/css/styles.css
@@ -87,11 +87,12 @@ body {
 
 .main-navigation {
   display: flex;
+  align-items: center;
 }
 
 .nav-menu {
   display: flex;
-  column-gap: 40px;
+  gap: 40px;
 }
 
 .logo-text {
@@ -110,6 +111,8 @@ body {
 }
 
 .nav-menu-link {
+  padding-top: 24px;
+  padding-bottom: 24px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -121,7 +124,7 @@ body {
 
 .contacts-list {
   display: flex;
-  column-gap: 40px;
+  gap: 40px;
 }
 
 .contacts-list-link {
@@ -161,6 +164,9 @@ body {
 
 .hero-title {
   margin-bottom: 48px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 496px;
   font-size: 56px;
   font-weight: 700;
   line-height: 1.07;
@@ -169,7 +175,11 @@ body {
 }
 
 .hero-button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   height: 56px;
+  min-width: 169px;
   padding-left: 32px;
   padding-right: 32px;
   font-family: var(--main-font-family);
@@ -197,7 +207,7 @@ body {
 
 .advantages-list {
   display: flex;
-  column-gap: 24px;
+  gap: 24px;
 }
 
 .advantage-item {
@@ -226,7 +236,7 @@ body {
 
 .work-list {
   display: flex;
-  column-gap: 24px;
+  gap: 24px;
 }
 
 .work-list-item {
@@ -237,25 +247,29 @@ body {
 
 .team-section {
   background-color: var(--dark-white-cloud);
-  margin-top: 120px;
-  margin-bottom: 120px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .team-list {
-  display: flex;
-  text-align: center;
-  column-gap: 24px;
+  display: flex;  
+  gap: 24px;
 }
 
 .team-member {
   flex-basis: calc((100% - 72px) / 4);
   background-color: var(--light-white);
   padding-bottom: 32px;
-  border-radius: 0px 0px 4px 4px;  
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team-member-description{
+  padding-top: 32px;
+  padding-bottom: 32px;  
 }
 
 .team-member-name {
-  margin-top: 32px;
+  text-align: center;
   margin-bottom: 8px;
   font-size: 20px;
   font-weight: 500;
@@ -265,6 +279,7 @@ body {
 }
 
 .team-member-position {
+  text-align: center;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
@@ -277,11 +292,14 @@ body {
   padding-bottom: 100px;
 }
 
-.footer-container {
+/*.footer-container {
   width: 264px;
-}
+  margin-left: 0;
+  margin-right: 0;
+}*/
 
 .page-footer .logo-text {
+  display: inline-block;
   margin-bottom: 16px;
 }
 
@@ -290,6 +308,7 @@ body {
 }
 
 .footer-text {
+  max-width: 264px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--dark-white-cloud);
@@ -304,8 +323,7 @@ body {
 
 .exhample-filter-button {
   height: 48px;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding: 12px 24px;
   font-family: var(--main-font-family);
   font-size: 16px;
   font-weight: 500;
@@ -321,7 +339,7 @@ body {
 .exhample-filter-button:focus {
   color: var(--light-white);
   background-color: var(--blue-pressed-ocean);
-  border-color: var(--blue-pressed-ocean);
+    border: 1px solid transparent
 }
 
 .filter-buttons-list {
@@ -334,7 +352,7 @@ body {
 .work-exhamples-list {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 24px;
+  gap: 24px;
   row-gap: 48px;
 }
 
@@ -343,17 +361,14 @@ body {
 }
 
 .work-exhample-item {
-    flex-basis: calc((100% - 48) / 3);
+  flex-basis: calc((100% - 48) / 3);
 }
 
 .exhample-info {
-  padding-left: 8px;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding: 32px 16px;
   border-left: 1px solid var(--grey-light-cornflower);
   border-right: 1px solid var(--grey-light-cornflower);
   border-bottom: 1px solid var(--grey-light-cornflower);
-
 }
 
 .work-exhample-title {
